[gd_scene load_steps=7 format=3 uid="uid://dc5xdrumbehih"]

[ext_resource type="Theme" uid="uid://sntbsi2ymcbo" path="res://assets/theme.tres" id="1_ll338"]
[ext_resource type="Script" path="res://src/main_menu.gd" id="1_pcg3b"]
[ext_resource type="AudioStream" uid="uid://dhhj42mvme5eh" path="res://assets/SFX/press_ok_button_3.mp3" id="3_82jc7"]

[sub_resource type="Animation" id="Animation_owyr8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBox:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_yiti4"]
resource_name = "ready"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBox:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_86cm0"]
_data = {
"RESET": SubResource("Animation_owyr8"),
"ready": SubResource("Animation_yiti4")
}

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ll338")
script = ExtResource("1_pcg3b")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0352941, 0.0588235, 0.0588235, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 128.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.411765, 0.705882, 0.760784, 1)
theme_override_font_sizes/font_size = 80
text = "LED"
horizontal_alignment = 1
vertical_alignment = 2

[node name="VBox" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 171.0
offset_top = 160.0
offset_right = -171.0
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="New" type="Button" parent="VBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../HBox/SoundSlider")
theme_override_colors/font_color = Color(0.792157, 0.858824, 1, 1)
text = "New Game"

[node name="Continue" type="Button" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.792157, 0.858824, 1, 1)
text = "Continue"

[node name="Highscore" type="Button" parent="VBox"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../HBox/SoundSlider")
theme_override_colors/font_color = Color(0.792157, 0.858824, 1, 1)
text = "Best Times"

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.792157, 0.858824, 1, 1)
text = "Volume: "

[node name="SoundSlider" type="HSlider" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../Highscore")
focus_neighbor_bottom = NodePath("../../New")
max_value = 1.0
step = 0.01

[node name="HBox2" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBox/HBox2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.792157, 0.858824, 1, 1)
text = "FullScreen: "

[node name="CheckBox" type="CheckBox" parent="VBox/HBox2"]
layout_mode = 2

[node name="Quit" type="Button" parent="VBox"]
layout_mode = 2
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_82jc7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_86cm0")
}
autoplay = "ready"

[connection signal="button_up" from="VBox/New" to="." method="_on_new_button_up"]
[connection signal="button_up" from="VBox/Continue" to="." method="_on_continue_button_up"]
[connection signal="button_up" from="VBox/Highscore" to="." method="_on_highscore_button_up"]
[connection signal="value_changed" from="VBox/HBox/SoundSlider" to="." method="_on_sound_slider_value_changed"]
[connection signal="toggled" from="VBox/HBox2/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="button_up" from="VBox/Quit" to="." method="_on_quit_button_up"]
